--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 
     <footer class="footer-distributed">
       <div class="footer-left">
-        <img src="darkshade.png" alt="" srcset="">
+        <img src="darkshade.png" style="width: 25%" srcset="">
 
         <p class="footer-links">
           <a href="#home" class="link-1">Home</a>
