--- a/forms.html
+++ b/forms.html
@@ -110,7 +110,7 @@
         </div>
     </section>
   </main>
-
+<script></script>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
