--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link text-black display-7" href="/forms.html"
+                <a class="nav-link link text-black display-7" href="./forms.html"
                   >CONTACT US
                 </a>
               </li>
@@ -823,7 +823,7 @@
 
           <a href="#reviews">Reviews</a>
 
-          <a href="/forms.html">Contact Us</a>
+          <a href="./forms.html">Contact Us</a>
         </p>
 
         <p class="footer-company-name" style="color: black !important; font-weight: 700;">Made For Solutions</p>
