--- a/forms.html
+++ b/forms.html
@@ -114,7 +114,7 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
