--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   alt=""
                   style="width: 40px"
                 />
-                <h3>FOUNDER'S MESSAGE</h3>
+                <h3 style="margin: 0; font-size: 2rem;">FOUNDER'S MESSAGE</h3>
                 <img
                   src="./assets/founders/jwbxjkwhxug2ts8902-]=wooi2ghvx2o89psuh2iusyu03-syu2isu29s3udig3o49d29ydodu2us2g9sip2ydfg82d2td989o22gsi2uydf89293-s]2[udgsi32uieuyiduty29pydi2'[3dii2;'pdug2;u3td789.png"
                   style="width: 40px"
@@ -206,7 +206,7 @@
                   style="width: 40px"
                 />
                 <a
-                  class="nav-link link"
+                  style="color: #5cc2ed ;"
                   href="https://instagram.com/madeforsolution_"
                   >@madeforsolution_</a
                 >
@@ -421,11 +421,11 @@
       <div
         class="container-fluid"
         style="
-        height: 100vh;
+        height: auto;
+        min-height: 100vh;
         display: flex;
           background-color: #000000a5;
           backdrop-filter: blur(10px);
-          padding: 100px;
         "
       >
         <div
@@ -824,7 +824,7 @@
       </div>
     </section>
 
-    <footer class="footer-distributed" style="display: flex">
+    <footer class="footer-distributed">
       <div class="footer-left">
         <img src="darkshade.jpeg" style="width: 25%" srcset="" />
         <p
