--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
               tabindex="-1"
               id="offcanvasRight"
               aria-labelledby="offcanvasRightLabel"
-              style="padding-left: 25px; padding-right: 25px"
+              style="padding-left: 25px; padding-right: 25px; 
+              overflow-y: scroll !important;"
             >
               <button
                 type="button"
