More Changes, Added Services Contact

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+
     <link
       rel="shortcut icon"
       href="assets/images/logo.png"
@@ -337,7 +339,7 @@
           <div class="col-12 col-md-6 col-lg-3" style="margin-bottom: 3%">
             <div class="hovereffectCard">
               <img
-                src="./assets/images/features (1).jpeg"
+                src="./assets/images/features (2).jpeg"
                 class="hovereffectCardImage"
                 alt=""
               />
@@ -356,7 +358,7 @@
           <div class="col-12 col-md-6 col-lg-3" style="margin-bottom: 3%">
             <div class="hovereffectCard">
               <img
-                src="./assets/images/features (2).jpeg"
+                src="./assets/images/features (1).jpeg"
                 class="hovereffectCardImage"
                 alt=""
               />
@@ -554,9 +556,10 @@
     </section>
 
     <section class="featuress" id="services">
-      <br><br>
+      <br><br><a href="./services/contact.html">
+        
       <div class="row">
-        <h2 class="section-heading">Services</h2>
+        <h2 class="section-heading" style="color: white;">Services</h2>
        
       </div>
       <div class="row">
@@ -588,7 +591,7 @@
               securing operations, and maintaining customer trust.
             </p>
           </div>
-        </div>
+        </div> 
         <div class="column">
           <div class="card">
             <div class="icon-wrapper">
@@ -616,7 +619,6 @@
             </p>
           </div>
         </div>
-
         <div class="column">
           <div class="card">
             <div class="icon-wrapper">
@@ -644,7 +646,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div></a>
     </section>
 
     <section data-bs-version="5.1" class="content1 cid-t0rzCdb6Oa" id="reviews">
@@ -837,7 +839,7 @@
         <p class="footer-links">
           <a href="#home" class="link-1">Home</a>
 
-          <a href="#sevices">Services</a>
+          <a href="#services">Services</a>
 
           <a href="#reviews">Reviews</a>
 
@@ -869,8 +871,6 @@
         </p>
 
         <div class="footer-icons">
-          <a href="#"><i style="height: 90%;" class="fa-brands fa-facebook"></i></a>
-
           <a href="#"><i style="height: 90%;" class="fa-brands fa-linkedin"></i></a>
           <a href="https://instagram.com/madeforsolution_"
             ><i style="height: 90%;" class="fa-brands fa-instagram"></i
