--- a/forms.html
+++ b/forms.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Form</title>
   <link rel="stylesheet" href="forms.css">
+  
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+
 </head>
 
 <body>
