--- a/thanks.html
+++ b/thanks.html
@@ -11,6 +11,9 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+
   </head>
   <body>
     <nav>
@@ -22,7 +25,7 @@
           <svg class="bi me-2" width="40" height="32">
             <use xlink:href="#bootstrap"></use>
           </svg>
-          <img src="darkshade.png" width="120px" height="120px" alt="" />
+          <img src="./darkshade.jpeg" width="120px" height="120px" alt="" style="border-radius: 50%;" />
         </a>
 
         <ul class="nav nav-pills" style="margin-right: 20px">
@@ -43,8 +46,8 @@
         class="d-block mx-auto mb-4"
         src="ii.png"
         alt=""
-        width="300"
-        height="300"
+        width="50%"
+        style="max-width: 300px;"
       />
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
@@ -60,6 +63,6 @@
   <script>
     setTimeout(() => {
       window.location .href = "./index.html"
-    }, 10000);
+    }, 100000);
   </script>
 </html>
