--- a/services/thanks.html
+++ b/services/thanks.html
@@ -30,7 +30,7 @@
 
         <ul class="nav nav-pills" style="margin-right: 20px">
           <li class="nav-item">
-            <a href="./index.html" class="nav-link active" aria-current="page"
+            <a href="../index.html" class="nav-link active" aria-current="page"
               >Home</a
             >
           </li>
