--- a/services/thanks.html
+++ b/services/thanks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thank You Page</title>
+    <title>Thank You</title>
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -42,7 +42,7 @@
       <h1 class="display-5 fw-bold text-white">
         Thank you for reaching out to us!!!<br>
       </h1>
-      <img width="150" height="150" src="https://img.icons8.com/ios-filled/150/ffffff/task-completed.png" alt="task-completed"/>
+      <img width="250" height="250" src="https://img.icons8.com/color/250/checkmark--v1.png" alt="checkmark--v1"/>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4 text-white"><br>
           We got your message about your service requirements. Our team will get back to you soon!
@@ -56,6 +56,6 @@
   <script>
     setTimeout(() => {
       window.location .href = "../index.html"
-    }, 100000);
+    }, 10000);
   </script>
 </html>
