--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thank You Page</title>
+    <title>Thank You</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,7 +45,7 @@
         Thank you for reaching out to us!!!
         <br>
       </h1>
-      <img width="175" height="175" src="https://img.icons8.com/ios-filled/175/ffffff/task-completed.png" alt="task-completed"/>
+      <img width="250" height="250" src="https://img.icons8.com/color/250/checkmark--v1.png" alt="checkmark--v1"/>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4 text-white">
           <br>
@@ -61,6 +61,6 @@
   <script>
     setTimeout(() => {
       window.location .href = "./index.html"
-    }, 100000);
+    }, 10000);
   </script>
 </html>
