--- a/index.html
+++ b/index.html
@@ -690,6 +690,38 @@
                 </div>
               </div>
             </div>
+            <div class="swiper-slide">
+              <div class="testimonialBox">
+                <img
+                  src="./assets/testimonials/right-quote.png"
+                  class="right-quote"
+                  style="width: 15% !important"
+                />
+                <p>
+                  MFS company's
+                  exceptional services of
+                  problem solving have
+                  played a pivotal role in
+                  boosting our sales.
+                  Their expertise helps us
+                  in market expansion
+                  has significantly
+                  widened our reach and
+                  propelled our business
+                  to new heights. We are
+                  incredibly grateful for
+                  their partnership and
+                  highly recommend their
+                  services to anyone
+                  seeking to elevate their
+                  business to new
+                  heights.
+                </p>
+                <div class="details">
+                  <h3>Shanti Marketing</h3>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
