UPDATES REVIEW, ARTICLE

--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
     />
     <meta name="description" content="" />
 
-    <title>Home</title>
+    <title>Home | Made For Solution</title>
+  <meta name="description" content="We are a vibrant organization that focuses on innovative technological solutions.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://madeforsolution.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Made For Solution | Home">
+  <meta property="og:description" content="We are a vibrant organization that focuses on innovative technological solutions.">
+  <meta property="og:image" content="https://madeforsolution.com/assets/images/BG-1.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="madeforsolution.com">
+  <meta property="twitter:url" content="https://madeforsolution.com/">
+  <meta name="twitter:title" content="Made For Solution | Home">
+  <meta name="twitter:description" content="We are a vibrant organization that focuses on innovative technological solutions.">
+  <meta name="twitter:image" content="https://madeforsolution.com/assets/images/BG-1.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
     <link
       rel="stylesheet"
       href="assets/web/assets/mobirise-icons2/mobirise2.css"
@@ -722,6 +741,38 @@
                 </div>
               </div>
             </div>
+            
+            <div class="swiper-slide">
+              <div class="testimonialBox">
+                <img
+                  src="./assets/testimonials/right-quote.png"
+                  class="right-quote"
+                  style="width: 15% !important"
+                />
+                <p>
+                  Mayur Traders has
+                  partnered with MFS
+                  company for data
+                  classification services. We
+                  have seen a significant
+                  increase in sales since
+                  implementing MFS
+                  company's data
+                  classification solutions. We
+                  highly recommend MFS
+                  company for their
+                  expertise and results-
+                  oriented approach. MFS's
+                  services have been
+                  instrumental in helping us
+                  increase our sales in a
+                  short period of time.
+                </p>
+                <div class="details">
+                  <h3>Mayur Traders</h3>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -768,7 +819,7 @@
               <div class="img-wrap">
                 <div class="item-img">
                   <img
-                    src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*41zLleY83Gf8I3rwoG8W2g.jpeg"
+                    src="https://miro.medium.com/v2/resize:fit:828/format:webp/0*K2-qbIxgrJYD_llN.png"
                     alt=""
                   />
                   <div class="img-overlay"></div>
@@ -777,7 +828,7 @@
                   <div class="links-container">
                     <p class="link-text mbr-fonts-style mb-0 display-7">
                       <a
-                        href="https://medium.com/@stevenkuyan/intelligence-in-the-workflow-a-case-study-with-eurowings-a7f4a75c6bff"
+                        href="https://medium.com/@pragmaticcoders/ai-predictions-top-13-ai-trends-for-2024-4158d23efd78"
                         style="color: black !important"
                         class="text-black"
                         >Read More...</a
@@ -788,7 +839,7 @@
               </div>
               <div class="item-text-container">
                 <p class="title-text mbr-fonts-style align-center display-5">
-                  <strong>Tiny ML and the future of on-device AI</strong>
+                  <strong>AI predictions: Top 13 AI trends for 2024</strong>
                 </p>
               </div>
             </div>
@@ -798,7 +849,7 @@
               <div class="img-wrap">
                 <div class="item-img">
                   <img
-                    src="https://i.ytimg.com/vi/EJBnKXdIO-8/maxresdefault.jpg"
+                    src="https://miro.medium.com/v2/resize:fit:828/format:webp/0*aw9Fd21ceJrCD8Ml"
                     alt=""
                   />
                   <div class="img-overlay"></div>
@@ -807,7 +858,7 @@
                   <div class="links-container">
                     <p class="link-text mbr-fonts-style mb-0 display-7">
                       <a
-                        href="https://towardsdatascience.com/tiny-ml-and-the-future-of-on-device-ai-a6728711a9ac"
+                        href="https://medium.com/@albertoromgar/the-best-ai-model-in-the-world-google-deepminds-gemini-has-surpassed-gpt-4-1ee07f84d2ff"
                         style="color: black !important"
                         class="text-black"
                         >Read More...</a
@@ -819,7 +870,7 @@
               <div class="item-text-container">
                 <p class="title-text mbr-fonts-style align-center display-5">
                   <strong
-                    >How Wireless Technology more Changing Business.</strong
+                    >The Best AI Model in the World</strong
                   >
                 </p>
               </div>
@@ -830,7 +881,7 @@
               <div class="img-wrap">
                 <div class="item-img">
                   <img
-                    src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*HWxNy38DyAgyYldYDik89g.jpeg"
+                    src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*IMdOF5omjgy3KWnP-5LR1g.png"
                     alt=""
                   />
                   <div class="img-overlay"></div>
@@ -839,7 +890,7 @@
                   <div class="links-container">
                     <p class="link-text mbr-fonts-style mb-0 display-7">
                       <a
-                        href="https://medium.com/@chappyasel/agi-manifesto-promise-7fb056293f67"
+                        href="https://medium.com/@matt_11659/ai-pocalypse-now-c04de8d0f435"
                         class="text-black"
                         style="color: black !important"
                         >Read More...</a
@@ -850,7 +901,7 @@
               </div>
               <div class="item-text-container">
                 <p class="title-text mbr-fonts-style align-center display-5">
-                  <strong>AGI Manifesto Part I: Promise</strong>
+                  <strong>AI-pocalypse Now</strong>
                 </p>
               </div>
             </div>
@@ -898,7 +949,7 @@
       <div class="footer-right">
         <p class="footer-company-about">
           <span>About the company</span>
-          We are a vibrant organization that focuses in innovative technological
+          We are a vibrant organization that focuses on innovative technological
           solutions.
         </p>
 
